overflow problem fixed

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -1,5 +1,6 @@
 .table-layout {
 	width: 100%;
+	overflow: auto;
 }
 table {
 	width: 100%;
@@ -41,3 +42,8 @@ td {
 	cursor: not-allowed;
 }
 
+/* @media (min-width: 594px) {
+	.table-layout {
+	overflow: auto;
+	}
+} */
